# puzzle-solver

./: Cargo.toml
src/: dancing_links.rs  lib.rs  main.rs  wasm.rs
src/cli/: calendar_puzzle.rs  mod.rs  sudoku_puzzle.rs
