[package]
name = "puzzle_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2018"
description = "A fast brute force puzzle solver using dancing links algorithm"
keywords = ["puzzle", "solver", "sudoku", "dancing links"]
repository = "https://github.com/xuanyan0x7c7/puzzle-solver"
license = "MIT"
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
